--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-upload.path=/C:/Users/DEDAN/Desktop/bell/ST/my_project3/uploads
+spring.freemarker.expose-request-attributes=true
+
+upload.path=D:/uploads
